// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NumberInput component contorls element 1`] = `
<NumberInput
  className=""
  controls={
    Object {
      "ContolsContainer": [Function],
    }
  }
  disabled={false}
  max={null}
  min={null}
  name="name"
  placeholder=""
  value={0}
>
  <div
    className="container "
  >
    <TextInput
      className="input"
      disabled={false}
      maxLength={null}
      name="name"
      onChange={[Function]}
      onlyNumber={true}
      placeholder=""
      value={0}
    >
      <div
        className="container input"
      >
        <input
          className="input"
          maxLength={null}
          onChange={[Function]}
          placeholder=""
          value={0}
        />
      </div>
    </TextInput>
    <ContolsContainer
      className="contolsContainer"
    >
      <div
        className="noContols"
      />
    </ContolsContainer>
  </div>
</NumberInput>
`;

exports[`NumberInput component default renders 1`] = `
<div
  className="container "
>
  <TextInput
    className="input"
    disabled={false}
    maxLength={null}
    name="name"
    onChange={[Function]}
    onlyNumber={true}
    placeholder=""
    value={0}
  />
  <ForwardRef
    className="contolsContainer"
  >
    <IconButton
      active={false}
      className="button"
      disable={false}
      icon="MINUS"
      onClick={[Function]}
      round={false}
      tip=""
      variant="INFO"
    />
    <IconButton
      active={false}
      className="button"
      disable={false}
      icon="PLUS"
      onClick={[Function]}
      round={false}
      tip=""
      variant="INFO"
    />
  </ForwardRef>
</div>
`;
